# orbital-engineer

./: .gitignore  Makefile  PIPELINE.md  README.md  TODO.md  Untitled.ipynb  pyproject.toml  simd.gnumeric
docs/: merge-strategy.md  triangular-indices.md
examples/: coalescence.py  ea4.py  nc_orbit.py  newtons_cradle.py
flatpak/: com.qmew.OrbitalEngineer.yaml
flatpak/data/: com.qmew.OrbitalEngineer.desktop  com.qmew.OrbitalEngineer.metainfo.xml
flatpak/python3-deps/: python3-deps.json  requirements.txt
src/: app.py  app2.py  app3.py  app_load.py
src/examples/: coalescence.py  nc_orbit.py  newtons_cradle.py
src/orbitalengineer/: __main__.py  app.py  app2.py  app3.py  color_stellar.py  helpers.py  names.py  resources.xml
src/orbitalengineer/engine/: __init__.py  body.py  clock.py  collision_strategy.py  compute.py  config.py  event.py  history.py  kernel.py  mask.py  memory.py  metric.py  orbitalnp.py  particle.py  simcontroller.py  twobody.py  vec.py  worker.py  worker_force_vectors.py
src/orbitalengineer/engine/cl/: acceleration.py  bounce.py  device.py  (+20 more)
src/orbitalengineer/examples/: coalescence.py  nc_orbit.py  newtons_cradle.py
src/orbitalengineer/resources/: styles.css
src/orbitalengineer/ui/: canvas.py  color.py  debug.py  ea4.py  ell.py  fmt.py  grid.py  gtk4.py  history.py  keyinput.py  mainapp.py  mainwindow.py  model.py  panel.py  plot.py  pz.py  select_device_window.py  ticker.py  ui_config.py  vec.py
src/orbitalengineer/ui_metrics/: metrics_app.py  plot.py
src/ui_metrics/: metrics_app.py  plot.py  ui_metrics_config.py  watch.py
(+125 files in other folders)
